--- a/dashboard.html
+++ b/dashboard.html
@@ -38,7 +38,7 @@
                     <label>Address</label>
                     <input type='text'></input>
                     <input type='text'></input>
-                    <input type='number'></input>
+                    <input type='text'></input>
                     <input type='text'></input>
                     <label>Rank</label>
                     <input type='text'></input>
