--- a/dashboard.html
+++ b/dashboard.html
@@ -22,7 +22,31 @@
                 <button onclick='showPanel(2,"#ebf1f5")'>Forms</button>
                 <button onclick='showPanel(3,"#ebf1f5")'>New Member</button>
             </div>
-            <div class='tabPanel'>Tab 1: Content</div>
+            <div class='tabPanel'>
+                <table class='tables'>
+                    <tr>
+                        <th>P.ID NUMBER</th>
+                        <th>NAME</th>
+                        <th>RANK</th>
+                        <th>DEPARTMENT</th>
+                        <th>HEBREW ACADEMY STATUS</th>
+                    </tr>
+                    <tr>
+                        <td>PA31-13000-1</td>
+                        <td>AHCHAAD AHBARAYAM</td>
+                        <td>CAPTAIN 13,000</td>
+                        <td>SHAMAR</td>
+                        <td>INSTRUCTOR</td>
+                    </tr>
+                    <tr>
+                        <td>NY41-1000-2</td>
+                        <td>THAHAWAM GABAR</td>
+                        <td>OFFICER 1,000</td>
+                        <td>SHAMAR</td>
+                        <td>GRADUATE</td>
+                    </tr>
+                </table>
+            </div>
             <div class='tabPanel'>Tab 2: Content</div>
             <div class='tabPanel'>Tab 3: Content</div>
             <div class='tabPanel'>
