--- a/dashboard.html
+++ b/dashboard.html
@@ -32,16 +32,24 @@
                         <th>HEBREW ACADEMY STATUS</th>
                     </tr>
                     <tr>
-                        <td>PA31-13000-1</td>
-                        <td>AHCHAAD AHBARAYAM</td>
+                        <td>
+                            <a href=''>PA31-13000-1</a>
+                        </td>
+                        <td>
+                            <a href=''>AHCHAAD AHBARAYAM</a>
+                        </td>
                         <td>CAPTAIN 13,000</td>
                         <td>SHAMAR</td>
                         <td>INSTRUCTOR</td>
                     </tr>
                     <tr>
-                        <td>NY41-1000-2</td>
-                        <td>THAHAWAM GABAR</td>
-                        <td>OFFICER 1,000</td>
+                        <td>
+                            <a href=''>NY41-5000-2</a>
+                        </td>
+                        <td>
+                            <a href=''>THAHAWAM GABAR</a>
+                        </td>
+                        <td>OFFICER 5,000</td>
                         <td>SHAMAR</td>
                         <td>GRADUATE</td>
                     </tr>
