--- a/dashboard.html
+++ b/dashboard.html
@@ -33,10 +33,10 @@
                     </tr>
                     <tr>
                         <td>
-                            <a href=''>PA31-13000-1</a>
+                            <a href='./profile.html'>PA31-13000-1</a>
                         </td>
                         <td>
-                            <a href=''>AHCHAAD AHBARAYAM</a>
+                            <a href='profile.html'>AHCHAAD AHBARAYAM</a>
                         </td>
                         <td>CAPTAIN 13,000</td>
                         <td>SHAMAR</td>
