--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <link href='style.css' rel="stylesheet" type="text/css">
         <link href='dashboard.html' rel="" type="text/html">
+        <link href='profile.html' rel="" type="text/html">
         <link href='main.js' type='text,script'>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        
     </head>
     <body>
         <nav class='navbar'>
@@ -37,5 +38,7 @@
                 </div>
             </div>
         </div>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src='main.js'></script>
     </body>
 </html>
