--- a/dashboard.html
+++ b/dashboard.html
@@ -36,7 +36,7 @@
                             <a href='./profile.html'>PA31-13000-1</a>
                         </td>
                         <td>
-                            <a href='profile.html'>AHCHAAD AHBARAYAM</a>
+                            <a href='./profile.html'>AHCHAAD AHBARAYAM</a>
                         </td>
                         <td>CAPTAIN 13,000</td>
                         <td>SHAMAR</td>
@@ -44,10 +44,10 @@
                     </tr>
                     <tr>
                         <td>
-                            <a href=''>NY41-5000-2</a>
+                            <a href='./profile2.html'>NY41-5000-2</a>
                         </td>
                         <td>
-                            <a href=''>THAHAWAM GABAR</a>
+                            <a href='./profile2.html'>THAHAWAM GABAR</a>
                         </td>
                         <td>OFFICER 5,000</td>
                         <td>SHAMAR</td>
