--- a/profile2.html
+++ b/profile2.html
@@ -19,11 +19,11 @@
 
         <ul>
             <li>Govenment Name: John Doe</li>
-            <li>Name: AHCHAAD AHBARAYAM</li>
-            <li>Rank: Captain 13,000</li>
+            <li>Name: THAHAWAM GABAR</li>
+            <li>Rank: Officer 5,000</li>
             <li>Department: Shamar</li>
-            <li>Hebrew Academy Status: Instuctor</li>
-            <li>Personal ID Number: PA31-13000-1</li>
+            <li>Hebrew Academy Status: Graduate</li>
+            <li>Personal ID Number: NY41-5000-2</li>
         </ul>
 
 
