--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,7 @@
     <body>
         <nav class='navbar'>
             <img src='img/SHIELD.png' alt='solidmagan image' />
-            <h2>I-RAK PROTOCAL</h2>
+            <h2>I-RAK PROTOCOL</h2>
             <ul>
                 <!-- <li class='logout'>Log Out</li> -->
             </ul>
