--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <nav class='navbar'>
             <img src='img/SHIELD.png' alt='solidmagan image' />
-            <h2>I-RAK PROTOCAL</h2>
+            <h2>I-RAK PROTOCOL</h2>
         </nav>
 
         <hr/>
